--- a/LSTM_regression.ipynb
+++ b/LSTM_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "f4e8431b-5b14-4ce0-8d52-8eece073a588",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,13 @@
     "BATCH_SIZE = 128\n",
     "LEARNING_RATE = 0.001\n",
     "SMILES_COL = 'Column3'\n",
-    "REGRESSION_COL = 'Column62'\n",
+    "REGRESSION_COL = 'Column8'\n",
     "URL = '/home/ishii/graduation_research/data/csvファイル/dft_B3LYP_6-31G*_zinc_for-sale_1000000_0to100000.csv'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "ca771bf3-36b2-4fec-836d-266ac0d51e60",
    "metadata": {
     "tags": []
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "281d2fdc-f4d5-4996-a3c7-0a2a265c21a4",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "b0267ec8-658a-4e5c-8b58-ba5a20136c21",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "         0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-      "         0,  0,  0,  0,  0,  0,  0]), tensor(-1.4622))\n"
+      "         0,  0,  0,  0,  0,  0,  0]), tensor(5.6882))\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "fd788f74-7bb4-4c23-ab60-18fb3f15af08",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "c80b1a8d-0167-41db-b0d3-c46072e6e02f",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "ff953cc2-a21b-4620-b448-7d5395224691",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0]])\n",
-      "tensor([-1.6655, -1.4622])\n",
+      "tensor([6.0161, 5.6882])\n",
       "tensor([[ 2,  8,  2,  3,  2, 23,  9,  4,  2,  3,  8,  6,  4,  6,  2,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
@@ -176,7 +176,7 @@
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0]])\n",
-      "tensor([-3.6988, -2.3010])\n",
+      "tensor([5.7693, 5.4207])\n",
       "tensor([[ 2,  1,  5, 10,  1,  1, 10,  1,  5,  2,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
@@ -187,7 +187,7 @@
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0]])\n",
-      "tensor([-2.2924, -2.4202])\n",
+      "tensor([5.4346, 5.8732])\n",
       "tensor([[ 2,  1,  5,  1,  1,  3,  6,  4,  1,  1,  1,  5,  2, 20,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
@@ -198,7 +198,7 @@
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0]])\n",
-      "tensor([-1.4225, -1.2480])\n",
+      "tensor([5.6504, 5.3704])\n",
       "tensor([[ 6,  8,  2,  3,  6,  4,  1,  5,  1,  1,  1, 10,  1,  5,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
@@ -209,7 +209,7 @@
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0]])\n",
-      "tensor([-2.5850, -2.1938])\n",
+      "tensor([5.5404, 5.8248])\n",
       "tensor([[ 9,  2,  2,  1,  5,  1,  1, 11, 10, 15, 12, 10,  5,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
@@ -220,7 +220,7 @@
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0]])\n",
-      "tensor([-3.0457, -2.8538])\n",
+      "tensor([7.0071, 4.9437])\n",
       "tensor([[ 2,  2,  5,  3,  2,  4,  2,  6,  2,  3,  9,  4,  8,  9,  5,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
@@ -231,7 +231,7 @@
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0]])\n",
-      "tensor([-3.6988, -3.6988])\n",
+      "tensor([7.8340, 5.4672])\n",
       "tensor([[ 2,  6,  2,  3,  8,  6,  4,  1,  5,  1,  1,  1, 10,  1,  5,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
@@ -242,7 +242,7 @@
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0]])\n",
-      "tensor([-3.2218, -1.5702])\n",
+      "tensor([5.5421, 4.2904])\n",
       "tensor([[ 2,  1,  5,  1,  1,  3,  6,  4,  1,  1,  3,  2,  4,  1,  5,  2, 20,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
@@ -253,7 +253,7 @@
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0]])\n",
-      "tensor([-1.5784, -1.0768])\n",
+      "tensor([5.7927, 5.4066])\n",
       "tensor([[ 6,  2,  1,  5,  1,  1,  1, 10,  1,  5,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
@@ -264,7 +264,7 @@
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0]])\n",
-      "tensor([-2.3565, -3.6988])\n",
+      "tensor([6.1657, 4.7086])\n",
       "tensor([[ 6,  1,  5, 10, 21,  1,  7,  1,  1,  3,  2, 20,  4,  1,  1,  1,  5,  7,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
@@ -275,7 +275,7 @@
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
       "          0,  0,  0,  0,  0,  0,  0]])\n",
-      "tensor([-1.3170, -1.3089])\n"
+      "tensor([4.7690, 5.5853])\n"
      ]
     }
    ],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "963eec5a-0677-478b-8f00-91974d4e7ab6",
    "metadata": {},
    "outputs": [],
@@ -300,8 +300,8 @@
     "class LSTM_Predictor(torch.nn.Module):\n",
     "    def __init__(self, dataset):\n",
     "        super(LSTM_Predictor, self).__init__()\n",
-    "        self.lstm_size = 128\n",
-    "        self.embedding_dim = 128\n",
+    "        self.lstm_size = 256\n",
+    "        self.embedding_dim = 256\n",
     "        self.num_layers = 3\n",
     "\n",
     "        n_vocab = len(dataset.uniq_words)\n",
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "2cfd0211-c662-47bc-a69c-f76ddb5031c7",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
     "\n",
     "    train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=BATCH_SIZE, drop_last=True)\n",
     "\n",
-    "    criterion = torch.nn.MSELoss()\n",
+    "    criterion = torch.nn.L1Loss()\n",
     "    optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "    \n",
     "    #scheduler = torch.optim.lr_scheduler.CosineAnnealingWarmRestarts(optimizer, T_0=10, T_mult=2)\n",
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "a67f788d-627e-42a1-89e3-38510896c476",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "3b912c08",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "9e7f1ebd",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "3d15e87d",
    "metadata": {},
    "outputs": [
@@ -802,13 +802,47 @@
    "source": [
     "print(\"test_Loss: {:.3f}\".format(test(dataset, test_dataset, model)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64cfc140",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=len(test_dataset), drop_last=True)\n",
+    "\n",
+    "state_h, state_c = model.init_state(len(test_dataset))\n",
+    "state_h = state_h.to(device)\n",
+    "state_c = state_c.to(device)\n",
+    "\n",
+    "for batch, (x, y) in enumerate(test_dataloader):\n",
+    "\n",
+    "    y_pred, (state_h, state_c) = model(x.to(device), (state_h, state_c))\n",
+    "    y_pred_permute = torch.permute(y_pred, (2, 1, 0))    \n",
+    "    state_h = state_h.detach()\n",
+    "    state_c = state_c.detach()\n",
+    "\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.scatter(y.cpu().detach().numpy(), y_pred_permute[0, dataset.max_length-1].cpu().detach().numpy())\n",
+    "plt.title(REGRESSION_COL)\n",
+    "plt.xlabel(\"labels\")\n",
+    "plt.ylabel(\"output\")\n",
+    "plt.grid(True)\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "pytorch",
    "language": "python",
-   "name": "pytorch"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -824,7 +858,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "f18a3795fe5cb6a973482da1273789e92c21cec72867792a35f0dcfcd5bea518"
    }
   }
  },
