test_lossの計算方法の修正

--- a/LSTM_regression.ipynb
+++ b/LSTM_regression.ipynb
@@ -10,7 +10,7 @@
     "MAX_EPOCHS = 200\n",
     "BATCH_SIZE = 128\n",
     "LEARNING_RATE = 0.001\n",
-    "SMILES_COL = 'Column3'\n",
+    "SMILES_COL = 'Column10'\n",
     "REGRESSION_COL = 'Column62'\n",
     "URL = '/home/ishii/graduation_research/data/csvファイル/revised_csv/dft_B3LYP_6-31G*_zinc_for-sale_1000000_0to100000_revised.csv'\n"
    ]
@@ -977,12 +977,14 @@
     "    model.eval()\n",
     "    device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "    \n",
-    "    test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=len(test_dataset), drop_last=True)\n",
+    "    batch_size = 1\n",
+    "    \n",
+    "    test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, drop_last=True)\n",
     "    \n",
     "    criterion = torch.nn.L1Loss()\n",
     "    \n",
     "    total_loss = 0\n",
-    "    state_h, state_c = model.init_state(len(test_dataset))\n",
+    "    state_h, state_c = model.init_state(batch_size)\n",
     "    state_h = state_h.to(device)\n",
     "    state_c = state_c.to(device)\n",
     "    \n",
@@ -996,7 +998,9 @@
     "        state_h = state_h.detach()\n",
     "        state_c = state_c.detach()\n",
     "    \n",
-    "    return total_loss\n",
+    "    average_total_loss = total_loss / len(test_dataloader)\n",
+    "    \n",
+    "    return average_total_loss\n",
     "        "
    ]
   },
@@ -1061,9 +1065,11 @@
     "model.eval()\n",
     "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
-    "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=len(test_dataset), drop_last=True)\n",
+    "batch_size = len(test_dataset)\n",
     "\n",
-    "state_h, state_c = model.init_state(len(test_dataset))\n",
+    "test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, drop_last=True)\n",
+    "\n",
+    "state_h, state_c = model.init_state(batch_size)\n",
     "state_h = state_h.to(device)\n",
     "state_c = state_c.to(device)\n",
     "\n",
@@ -1102,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]"
   },
   "vscode": {
    "interpreter": {
