--- a/LSTM_regression_multi_task.ipynb
+++ b/LSTM_regression_multi_task.ipynb
@@ -141,6 +141,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "37c5260e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y = \"wavelength\"\n",
+    "Z = \"logP\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24804ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Log in to your W&B account\n",
+    "import wandb\n",
+    "wandb.login()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3192ae74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wandb.init(\n",
+    "    # Set the project where this run will be logged\n",
+    "    project=\"LSTMによる\" + Y + \"と\" + Z + \"の予測\", \n",
+    "    # We pass a run name (otherwise it’ll be randomly assigned, like sunshine-lollypop-10)\n",
+    "    name=f\"LSTM_multi_task\", \n",
+    "    # Track hyperparameters and run metadata\n",
+    "    config={\n",
+    "    \"batch_size\": BATCH_SIZE,\n",
+    "    \"learning_rate\": LEARNING_RATE,\n",
+    "    \"architecture\": \"LSTM\",\n",
+    "    \"data_path\": URL,\n",
+    "    \"epochs\": MAX_EPOCHS,\n",
+    "    \"lstm_size\": 128,\n",
+    "    \"embedding_dim\": 128,\n",
+    "    \"num_layers\": 3,\n",
+    "    \"dropout\": 0.2,\n",
+    "    \"lamda_y\": LAMDA_Y,\n",
+    "    \"lamda_z\": LAMDA_Z\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "id": "2cfd0211-c662-47bc-a69c-f76ddb5031c7",
    "metadata": {},
@@ -246,6 +297,9 @@
     "\n",
     "        average_total_loss_z = total_train_loss_z / int(len(train_dataloader) * 0.75)\n",
     "        average_total_val_loss_z = total_val_loss_z / (len(train_dataloader) - int(len(train_dataloader) * 0.75))        \n",
+    "        \n",
+    "        wandb.log({\"train_Loss\": average_total_loss, \"val_Loss\": average_total_val_loss, \"train_Loss_y\": average_total_loss_y, \"val_Loss_y\": average_total_val_loss_y, \"train_Loss_z\": average_total_loss_z, \"val_Loss_z\": average_total_val_loss_z})\n",
+    "        \n",
     "        \n",
     "        print(\"Epoch: {}, train_Loss: {:.3f}, val_Loss: {:.3f}, train_Loss_y: {:.3f}, val_Loss_y: {:.3f}, train_Loss_z:{:.3f}, val_Loss_z:{:.3f}\".format(\n",
     "            epoch+1, \n",
@@ -858,130 +912,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "27a7152e-3438-43f2-9432-f1b189df9404",
+   "execution_count": null,
+   "id": "854196e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predect(dataset, test_dataset, model):\n",
-    "    model.eval()\n",
-    "    device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
-    "    \n",
-    "    test_dataloader = torch.utils.data.DataLoader(test_dataset, batch_size=5, drop_last=True)\n",
-    "\n",
-    "    index = np.random.choice(len(test_dataloader))\n",
-    "    \n",
-    "    for batch, (x, y, z) in enumerate(test_dataloader):\n",
-    "    \n",
-    "        smiles, y, z = x, y, z\n",
-    "        break\n",
-    "    state_h, state_c = model.init_state(5)\n",
-    "    state_h = state_h.to(device)\n",
-    "    state_c = state_c.to(device)\n",
-    "    output, (state_h, state_c) = model(smiles.to(device), (state_h, state_c))\n",
-    "    output_permute = torch.permute(output, (2, 1, 0))    \n",
-    "\n",
-    "    print(output_permute)\n",
-    "    print(y)\n",
-    "    print(z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "id": "df41f473",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[[-0.0726, -0.1839, -0.1839, -0.1839, -0.1839],\n",
-      "         [-0.1162, -0.5293, -0.7402, -0.5293, -0.5293],\n",
-      "         [-0.2724, -1.0068, -1.3992, -1.0068, -1.1366],\n",
-      "         [-0.5556, -1.4714, -1.7319, -1.4714, -1.6050],\n",
-      "         [-1.0207, -1.7217, -1.8202, -1.7217, -1.7867],\n",
-      "         [-1.4371, -1.8110, -1.8385, -1.8110, -1.8313],\n",
-      "         [-1.6880, -1.8355, -1.8421, -1.8355, -1.8406],\n",
-      "         [-1.7950, -1.8413, -1.8428, -1.8413, -1.8425],\n",
-      "         [-1.8289, -1.8426, -1.8430, -1.8426, -1.8429],\n",
-      "         [-1.8391, -1.8429, -1.8430, -1.8429, -1.8430],\n",
-      "         [-1.8420, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8427, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8429, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430],\n",
-      "         [-1.8430, -1.8430, -1.8430, -1.8430, -1.8430]]], device='cuda:0',\n",
-      "       grad_fn=<PermuteBackward0>)\n",
-      "tensor([-1.2182, -2.4815, -3.0969, -3.5227, -1.5654])\n"
-     ]
-    }
-   ],
-   "source": [
-    "predect(dataset, test_dataset, model)"
+    "y = Y\n",
+    "z = Z"
    ]
   },
   {
@@ -1017,7 +954,7 @@
     "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(12,4))\n",
     "axes[0].plot(train_losses, label=\"train_Loss\")\n",
     "axes[0].plot(val_losses, label=\"val_Loss\")\n",
-    "axes[0].set_title(\"loss of two tasks\")\n",
+    "axes[0].set_title(\"loss of \" + y + \" and \" + z)\n",
     "axes[0].grid()\n",
     "axes[0].set_xlabel(\"epoch\")\n",
     "axes[0].set_ylabel(\"MSE\")\n",
@@ -1025,12 +962,15 @@
     "\n",
     "axes[1].plot(train_losses, label=\"train_Loss\")\n",
     "axes[1].plot(val_losses, label=\"val_Loss\")\n",
-    "axes[1].set_title(\"loss of two tasks\")\n",
+    "axes[1].set_title(\"loss of \" + y + \" and \" + z)\n",
     "axes[1].grid()\n",
     "axes[1].set_yscale('log')\n",
     "axes[1].set_xlabel(\"epoch\")\n",
     "axes[1].set_ylabel(\"MSE\")\n",
-    "axes[1].legend()\n"
+    "axes[1].legend()\n",
+    "\n",
+    "plt.savefig(\"output_multi_task/\" + y + \"_\" + z + \"/graph_losses_\" + y + \"_\" + z + \".png\")\n",
+    "wandb.log({\"graph_losses_\" + y + \"_\" + z: wandb.Image(\"output_multi_task/\" + y + \"_\" + z + \"/graph_losses_\" + y + \"_\" + z + \".png\")})\n"
    ]
   },
   {
@@ -1064,7 +1004,7 @@
     "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(12,4))\n",
     "axes[0].plot(train_losses_y, label=\"train_Loss_y\")\n",
     "axes[0].plot(val_losses_y, label=\"val_Loss_y\")\n",
-    "axes[0].set_title(\"loss of y\")\n",
+    "axes[0].set_title(\"loss of \" + y)\n",
     "axes[0].grid()\n",
     "axes[0].set_xlabel(\"epoch\")\n",
     "axes[0].set_ylabel(\"MSE\")\n",
@@ -1072,12 +1012,15 @@
     "\n",
     "axes[1].plot(train_losses_y, label=\"train_Loss_y\")\n",
     "axes[1].plot(val_losses_y, label=\"val_Loss_y\")\n",
-    "axes[1].set_title(\"loss of y\")\n",
+    "axes[1].set_title(\"loss of \" + y)\n",
     "axes[1].grid()\n",
     "axes[1].set_yscale('log')\n",
     "axes[1].set_xlabel(\"epoch\")\n",
     "axes[1].set_ylabel(\"MSE\")\n",
-    "axes[1].legend()"
+    "axes[1].legend()\n",
+    "\n",
+    "plt.savefig(\"output_multi_task/\" + y + \"_\" + z + \"/graph_losses_\" + y + \".png\")\n",
+    "wandb.log({\"graph_losses_\" + y: wandb.Image(\"output_multi_task/\" + y + \"_\" + z + \"/graph_losses_\" + y + \".png\")})\n"
    ]
   },
   {
@@ -1111,7 +1054,7 @@
     "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(12,4))\n",
     "axes[0].plot(train_losses_z, label=\"train_Loss_z\")\n",
     "axes[0].plot(val_losses_z, label=\"val_Loss_z\")\n",
-    "axes[0].set_title(\"loss of z\")\n",
+    "axes[0].set_title(\"loss of \" + z)\n",
     "axes[0].grid()\n",
     "axes[0].set_xlabel(\"epoch\")\n",
     "axes[0].set_ylabel(\"MSE\")\n",
@@ -1119,12 +1062,15 @@
     "\n",
     "axes[1].plot(train_losses_z, label=\"train_Loss_z\")\n",
     "axes[1].plot(val_losses_z, label=\"val_Loss_z\")\n",
-    "axes[1].set_title(\"loss of z\")\n",
+    "axes[1].set_title(\"loss of \" + z)\n",
     "axes[1].grid()\n",
     "axes[1].set_yscale('log')\n",
     "axes[1].set_xlabel(\"epoch\")\n",
     "axes[1].set_ylabel(\"MSE\")\n",
-    "axes[1].legend()"
+    "axes[1].legend()\n",
+    "\n",
+    "plt.savefig(\"output_multi_task/\" + y + \"_\" + z + \"/graph_losses_\" + z + \".png\")\n",
+    "wandb.log({\"graph_losses_\" + z: wandb.Image(\"output_multi_task/\" + y + \"_\" + z + \"/graph_losses_\" + z + \".png\")})\n"
    ]
   },
   {
@@ -1188,6 +1134,12 @@
     "    average_total_loss_y = total_test_loss_y / len(test_dataloader)\n",
     "    average_total_loss_z = total_test_loss_z / len(test_dataloader)\n",
     "    \n",
+    "    wandb.summary['test_Loss'] = average_total_loss\n",
+    "    wandb.summary['test_Loss_y'] = average_total_loss_y\n",
+    "    wandb.summary['test_Loss_z'] = average_total_loss_z\n",
+    "\n",
+    "\n",
+    "    \n",
     "    return average_total_loss, average_total_loss_y, average_total_loss_z, output_y, output_z, label_y, label_z\n",
     "        "
    ]
@@ -1236,12 +1188,15 @@
    "source": [
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.scatter(output_y, label_y, s=1)\n",
-    "plt.title(REGRESSION_COL_y)\n",
+    "plt.scatter(label_y, output_y, s=1)\n",
+    "plt.title(y)\n",
     "plt.xlabel(\"label_y\")\n",
     "plt.ylabel(\"output_y\")\n",
     "plt.grid(True)\n",
     "\n",
+    "\n",
+    "plt.savefig(\"output_multi_task/\" + y + \"_\" + z + \"/scatter_plot_\" + y + \".png\")\n",
+    "wandb.log({\"scatter_plot_\" + y: wandb.Image(\"../output/\" + y + \"_\" + z + \"/scatter_plot_\" + y + \".png\")})\n",
     "plt.show()"
    ]
   },
@@ -1263,13 +1218,40 @@
     }
    ],
    "source": [
-    "plt.scatter(output_z, label_z, s=1)\n",
-    "plt.title(REGRESSION_COL_z)\n",
+    "plt.scatter(label_z, output_z, s=1)\n",
+    "plt.title(z)\n",
     "plt.xlabel(\"label_z\")\n",
     "plt.ylabel(\"output_z\")\n",
     "plt.grid(True)\n",
     "\n",
+    "\n",
+    "plt.savefig(\"output_multi_task/\" + y + \"_\" + z + \"/scatter_plot_\" + z + \".png\")\n",
+    "wandb.log({\"scatter_plot_\" + z: wandb.Image(\"../output/\" + y + \"_\" + z + \"/scatter_plot_\" + z + \".png\")})\n",
+    "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ab40e80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), \"model_multi_task/\" + y + \"_\" + z + \"/model_weight_multi_task_\" + y + \"_\" + z + \".pth\")\n",
+    "artifact = wandb.Artifact('model', type='model')\n",
+    "artifact.add_file(\"model_multi_task/\" + y + \"_\" + z + \"/model_weight_multi_task_\" + y + \"_\" + z + \".pth\")\n",
+    "wandb.log_artifact(artifact)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c82e25c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wandb.finish()"
    ]
   }
  ],
@@ -1289,7 +1271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]"
   },
   "vscode": {
    "interpreter": {
